--- a/.github/workflows/automatic_pull_request_review.yml
+++ b/.github/workflows/automatic_pull_request_review.yml
@@ -61,4 +61,4 @@ jobs:
         CI: true
       
     - name: Clean up previous code coverage report
-      run: bundle exec fastlane cleanUpOutputLane
+      run: bundle exec fastlane cleanUpOutput
