--- a/CryptoPrices.xcodeproj/xcshareddata/xcschemes/CryptoPrices.xcscheme
+++ b/CryptoPrices.xcodeproj/xcshareddata/xcschemes/CryptoPrices.xcscheme
@@ -29,8 +29,7 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4D0A1DAB29349D670038624D"
@@ -40,8 +39,7 @@
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4D0A1DB529349D670038624D"
