--- a/.github/workflows/deploy_Firebase.yml
+++ b/.github/workflows/deploy_Firebase.yml
@@ -29,8 +29,8 @@ jobs:
         yarn add firebase-tools
         echo "$(yarn global bin)" >> $GITHUB_PATH
             
-    - name: Bundle install
-      run: bundle install
+    - name: Setup
+      run: make setup
 
     - name: Build and Test
       run: bundle exec fastlane buildAndTest
