--- a/.github/workflows/deploy_Release_Firebase.yml
+++ b/.github/workflows/deploy_Release_Firebase.yml
@@ -24,8 +24,8 @@ jobs:
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
             
-    - name: Bundle install
-      run: bundle install
+    - name: Setup
+      run: make setup
 
     - name: Build and Test
       run: bundle exec fastlane buildAndTest
